(lang dune 3.12)

(name CS320)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name Spring-2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

(package
  (name Fall-2024))
; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
