(library
 (name Specifications)
 (libraries zarith)
 (public_name Fall-2025)
 (modules_without_implementation
  assign0
  assign1
  assign2
  assign3
  assign4
  assign5
  assign6))

(documentation
  (package Fall-2025)
  (mld_files
   index
   topics
   lab01
   lab02
   lab03
   lab04
   lab05
   lab09
   lab10
   interp1))
