(library
 (name Specifications)
 (public_name Spring-2025)
 (libraries stdlib320)
 (modules_without_implementation
   stdlib320
   assign0
   assign1
   assign2
   assign3
   assign4
   assign5
   lab3
   lab4
   lab5))

(documentation
  (package Spring-2025)
  (mld_files
   index
   topics
   lab1
   lab2))
