(library
 (name Specifications)
 (public_name Spring-2025)
 (libraries stdlib320)
 (modules_without_implementation
   stdlib320
   assign0
   assign1
   assign2
   assign3
   assign4
   assign5
   assign6
   lab3
   lab4
   lab5))

(documentation
  (package Spring-2025)
  (mld_files
   index
   topics
   lab1
   lab2
   lab8
   lab9
   lab10
   lab11
   lab12
   interp1
   interp2))
